<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary"
    android:backgroundTint="@color/secondary"
    android:id="@+id/card_child"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/child_name"
                android:paddingStart="12dp"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_name"
                android:paddingStart="12dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                tools:ignore="RtlSymmetry"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingStart="12dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/primary"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingStart="12dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingStart="12dp"
                android:text="@string/gender"
                android:textColor="@color/primary"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingStart="12dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>